kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minipharma-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcluster
spec:
  rules:
    - host: minipharma.contal.chl.connected-health.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minipharma-service
                port:
                  number: 80
  tls:
    - hosts:
        - minipharma.contal.chl.connected-health.fr
      secretName: minipharma-cert
